--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.10.1"
   },
   "scripts": {
-    "run:http": "nodemon --watch HTTP_1.1/ HTTP_1.1/lec-06-prg-01-http-web-server.js"
+    "http-1": "nodemon --watch HTTP_1.1/ HTTP_1.1/lec-06-prg-01-http-web-server.js",
+    "http-2": "node HTTP_1.1/lec-06-prg-02-http-web-client.js"
   }
 }
