--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "koa-body": "^4.2.0",
     "koa-router": "^10.1.1",
     "nodemon": "^2.0.15",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "zeromq": "6.0.0-beta.6"
   },
   "scripts": {
     "http-1": "nodemon --watch HTTP_1.1/ HTTP_1.1/lec-06-prg-01-http-web-server.js",
@@ -21,6 +22,8 @@
     "http-5": "node HTTP_1.1/lec-06-prg-05-json-example.js",
     "http-6": "node HTTP_1.1/lec-06-prg-06-json-example.js",
     "http-7": "nodemon --watch HTTP_1.1/ HTTP_1.1/lec-06-prg-07-rest-server.js",
-    "http-8": "node HTTP_1.1/lec-06-prg-08-rest-client.js"
+    "http-8": "node HTTP_1.1/lec-06-prg-08-rest-client.js",
+    "zmq-1": "node ZMQ/lec-05-prg-01-req-rep-basic-server.js",
+    "zmq-2": "node ZMQ/lec-05-prg-02-req-rep-basic-client.js"
   }
 }
