--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "zmq-5": "node ZMQ/lec-05-prg-05-pub-sub-and-pull-push-server.js",
     "zmq-6": "node ZMQ/lec-05-prg-06-pub-sub-and-pull-push-client.js",
     "zmq-7": "node ZMQ/lec-05-prg-07-pub-sub-and-pull-push-server-v2.js",
-    "zmq-8": "node ZMQ/lec-05-prg-08-pub-sub-and-pull-push-client-v2.js"
+    "zmq-8": "node ZMQ/lec-05-prg-08-pub-sub-and-pull-push-client-v2.js",
+    "zmq-9": "node ZMQ/lec-05-prg-09-dealer-router-async-server.js",
+    "zmq-10": "node ZMQ/lec-05-prg-10-dealer-router-async-client.js"
   }
 }
